Minor clean ups

--- a/Tweetables/.env
+++ b/Tweetables/.env
@@ -1,7 +1,2 @@
-#twitter API credentials
-API_KEY = "O3SpO2sm6xKWSnzbhZznFHJGa"
-API_SECRET ="8QsoEz0Lla0hTLfDLyKFLJbYjN6TukYBJcM5XMsMQshqhyoSmM"
-ACCESS_TOKEN = "1912241723285336064-sZ5BMumVzOCpgaZeoTZkKNTLsoQBg9"
-ACCESS_SECRET = "G5EWdd6DgF1Egi7M3HnKox7TVmoLbtLo1OvjgTfxmSOib"
-BEARER_TOKEN = "AAAAAAAAAAAAAAAAAAAAAOiU0gEAAAAAeZwCYgxlNPMBivuOOQnaFe5ubUU%3DkBCJJtNsUMdn2WNDZh0AwkO921XkfwuraqLmOBdFxy0jrU3gHg" # needed for API v2
+# Encryption key
 MASTER_KEY = "lv8PJmivx5fwkyUTKzLeqGfSld1b6woP59V6WU5ARyU="
