--- a/Tweetables/.env
+++ b/Tweetables/.env
@@ -1,2 +1,8 @@
 # Encryption key
 MASTER_KEY = "lv8PJmivx5fwkyUTKzLeqGfSld1b6woP59V6WU5ARyU="
+
+
+# Neo4J Aura database credentials - Day E.
+NEO4J_URI=neo4j+s://f1c11ed7.databases.neo4j.io
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=Xpendable$2025!
